@@ -1,9 +1,7 @@
 AUX sagan.confd 271 RMD160 e6b80458e7f6d47c3635a960633b85ead1d4cc18 SHA1 d16a1dd18eb481745f63e712edcc07919c44da20 SHA256 5ebb28b91dc3c1ee611f7f28c0e5b19cd4848af1c479d7dac2a468284b3258f2
-AUX sagan.init 359 RMD160 7a40fddaddfdf0f37a159e3fe19596cc97620002 SHA1 cda3294ad43848fd0e41aa68730b09b4d6c9e0a2 SHA256 2f62664907dbe7f1fb0640c2e17f1e8bf216c1dc9bd7d9bd921573b997c7daad
-DIST sagan-0.1.7.tar.gz 172332 RMD160 1eb2010a562a8de425646c73ad2ca678adf97cb7 SHA1 ed50082f1cb7749e1a1bb23f12b2e4b6a76a656a SHA256 49dc33ae92576f8525b4b680610702a142be1b2b3b9d4660db4ff30168e3db61
+AUX sagan.init 517 RMD160 5886920c2263bd474ce39d44f045c85b7e1f0d74 SHA1 8dccca0085f6fd2fe22978ea3767b8febe278bb5 SHA256 1e4340679cd7bb84d01c51cd3536da679b1e6e82c245f8559f2e79a666c8cbd2
 DIST sagan-0.1.8.tar.gz 195091 RMD160 de4ccdcbb6f076d8efbd79cf3f583c5c843a19cb SHA1 eeb11004733ae35e5e28ce011e7db7778a9c5dc3 SHA256 e5db2b48632f159cc60a9a8e844140ef425c17ccade7bc2eecbe444fd5897ae1
-EBUILD sagan-0.1.7-r1.ebuild 1961 RMD160 ec3f47c2c3d5debac30fb4a2cbf670c50d639395 SHA1 860808470149cb60698089ab3640e54682923341 SHA256 f8a6a598aaef13dff97d0afe68ba2cbccb7ea4002084af5fa0bab4cd6fb0eb6e
-EBUILD sagan-0.1.8.ebuild 2215 RMD160 461d193ddab55007d3011815a473ce9f888fcdb5 SHA1 52a5a57cff925cef62ed304de640e515db35f232 SHA256 d5534bdaf7db5595cf710f7120288deda575f39732fec50b178e43a19c4c01fe
+EBUILD sagan-0.1.8-r1.ebuild 2234 RMD160 40ce6301f404582139fdff3d3f78da71591a6984 SHA1 50449f9a07c1f383e2859fea2a4f2df35d1f51d4 SHA256 e5847e640770b8f57660e432ed618cb3c730d1a066eba59ea15e9fd4816e8b9f
 EBUILD sagan-9999.ebuild 2161 RMD160 127e0bc1fbd98e5818e1dfdfbc716742064a27d0 SHA1 a1f3fbaf4fb81a3860756f6d263d5b19aedec4a9 SHA256 d390d30b220ff1e939da95f0172434e67db42fcd0f14673c10f271de755808d6
-MISC ChangeLog 1808 RMD160 ddec62cc3fce820b37e54f7ce684ddfcbcf48e02 SHA1 61dd78c009c962d5edd9198663899e302234977f SHA256 34724220410fb044e0950e1c83b99d7006d4a4dbb67d28a6c221c0731bd292a3
+MISC ChangeLog 2056 RMD160 9e4ae87e729d427ddfa7b29f4d2e112f6f1ca326 SHA1 8b0d0378e362f81a392cd3d743242815bd2b21d7 SHA256 35405e5ea11b9bbd86228f7b21ab46ea3fdff3f830e0f86bded158373ea187ec
 MISC metadata.xml 686 RMD160 31be024e967868dd3067159130db9296eaeeba0a SHA1 08ec9031e8752811e5f213c366173729d3d6a99e SHA256 8db05a27425b2e74fdd97546a003eaa0a7976e4f846cfcc053b17f8ad89f0839
