@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sagan-0.1.8-r1 (18 Mar 2011)
+
+  18 Mar 2011; A. Vinogradov <spamslepnoga@inbox.ru> -sagan-0.1.7-r1.ebuild,
+  -sagan-0.1.8.ebuild, +sagan-0.1.8-r1.ebuild, files/sagan.init:
+  add esvn_clean in ebuild  rion-overlay issue #136 , rewrite init script
+
 *sagan-0.1.8 (17 Mar 2011)
 
   17 Mar 2011; A. Vinogradov <spamslepnoga@inbox.ru> +sagan-0.1.8.ebuild:
